--- a/package.json
+++ b/package.json
@@ -2,11 +2,22 @@
   "name": "bookmanagement_backend",
   "version": "1.0.0",
   "description": "all crud restFull api of book management using Node.js",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "server": "node server.js",
-    "dev": "nodemon server.js"
+    "server": "node src/server.js",
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/server.js"
   },
   "author": "Mohammad Ejaz - (kingejaz143@gmail.com)",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.0.3"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0"
+  }
 }
